--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Dharmendra Jangir
-logo: /Assets/Profile_Picture/Dharmendra Jangir.jpg
+logo: /Assets/Profile_Picture/3.jpg
 #description: text below image
 show_downloads: true
 theme: jekyll-theme-minimal
